wip: preparing to organize segmenting/plotting code into functions

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -354,7 +354,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "3d2afdfb-a478-409f-8e10-cc36baf4a512",
+       "ref": "f2e5e549-bda8-42db-88a9-4494aea24caf",
        "rows": [
         [
          "P186",
@@ -769,7 +769,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "db8c0234-bb3d-41e5-9137-5151a8d0b761",
+       "ref": "80f0213c-819d-4508-839e-458a10b48b1a",
        "rows": [
         [
          "P186",
@@ -1147,7 +1147,7 @@
          "type": "float"
         }
        ],
-       "ref": "abe1a1bb-bb29-433f-a24f-d81ab7e0edee",
+       "ref": "570ac6f2-cd0f-49be-b633-37e4f1c81473",
        "rows": [
         [
          "P186",
@@ -2529,7 +2529,7 @@
          "type": "float"
         }
        ],
-       "ref": "ada400cb-fc15-47f0-84de-f9eba7eaf6f1",
+       "ref": "f474d9aa-291f-4bf2-8ea0-8f90cf5cd628",
        "rows": [
         [
          "P186",
@@ -4076,7 +4076,7 @@
          "type": "float"
         }
        ],
-       "ref": "67a0baee-c99b-4d74-b434-1684845de4f1",
+       "ref": "b924978c-ea29-4624-a32a-f72bf39311dc",
        "rows": [
         [
          "P186",
@@ -5524,7 +5524,7 @@
          "type": "string"
         }
        ],
-       "ref": "9c2b664e-4a0b-42d0-8fa5-f0c646a315de",
+       "ref": "fdf5c372-5bd3-4f7a-ac18-94acfb27e910",
        "rows": [
         [
          "0",
@@ -6109,7 +6109,7 @@
          "type": "string"
         }
        ],
-       "ref": "c2183dfc-1390-4ebc-a064-633cca735c2f",
+       "ref": "c22b18dd-f8b4-41a8-b2e4-fda19dcac001",
        "rows": [
         [
          "0",
@@ -6663,8 +6663,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'RVOTFREEWALL', 'LCC', 'LVOTSUBVALVULAR', 'COMMISSURE', 'RCC', 'RVOTSEPTUM', 'SUMMIT'}\n",
-      "Subregions in sheet 2: {'RVOTFREEWALL', 'LVOTSUMMIT', 'LCC', 'LVOTSUBVALVULAR', 'COMMISURE', 'RCC', 'RVOTSEPTUM'}\n"
+      "Subregions in sheet 1: {'LVOTSUBVALVULAR', 'RVOTSEPTUM', 'COMMISSURE', 'LCC', 'RVOTFREEWALL', 'RCC', 'SUMMIT'}\n",
+      "Subregions in sheet 2: {'LVOTSUBVALVULAR', 'RVOTSEPTUM', 'LVOTSUMMIT', 'LCC', 'RVOTFREEWALL', 'RCC', 'COMMISURE'}\n"
      ]
     }
    ],
@@ -6912,7 +6912,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "77031686-5ab0-48a0-b7cc-32bfea37414e",
+       "ref": "6fe4a232-655a-4ab0-847b-de1ad889b23a",
        "rows": [
         [
          "P186",
@@ -7999,7 +7999,7 @@
          "type": "float"
         }
        ],
-       "ref": "b49a079e-9f6f-48e8-9d64-3b77c3ca553b",
+       "ref": "ee5d94af-2e86-40aa-9ad4-7f90ccb90564",
        "rows": [
         [
          "P186",
@@ -9109,7 +9109,7 @@
          "type": "string"
         }
        ],
-       "ref": "4be64b1b-8782-4c97-8b74-1fad68dd3d5d",
+       "ref": "f6f6c18f-f186-4286-a50c-96f0ddf44936",
        "rows": [
         [
          "P173",
@@ -9264,7 +9264,7 @@
          "type": "string"
         }
        ],
-       "ref": "acd5782e-de21-4969-844b-468b021c58ae",
+       "ref": "b4591440-c4c5-4e18-828a-9707739cd4eb",
        "rows": [
         [
          "P186",
@@ -9495,7 +9495,7 @@
          "type": "string"
         }
        ],
-       "ref": "5c2f932f-d656-4edf-9a58-f53b69da7563",
+       "ref": "a1a8a411-a20c-4b21-8418-09580dab1963",
        "rows": [
         [
          "P172",
@@ -9738,7 +9738,7 @@
          "type": "string"
         }
        ],
-       "ref": "fd5cf363-ae13-4146-9dff-261a6a69ff62",
+       "ref": "40608d8d-6f90-4fa0-888c-08e9459768df",
        "rows": [
         [
          "P290",
@@ -9895,7 +9895,7 @@
          "type": "string"
         }
        ],
-       "ref": "bb94c7a4-8fb2-4fca-952c-9c52d8728a17",
+       "ref": "0132d862-9b30-4d52-bfdf-4801c29849a2",
        "rows": [
         [
          "P285",
@@ -10158,7 +10158,7 @@
          "type": "integer"
         }
        ],
-       "ref": "88c4defa-8155-409f-858c-e25f7f3c1df9",
+       "ref": "117a3113-0828-41dd-b010-b39e01653c7b",
        "rows": [
         [
          "P245",
@@ -10617,7 +10617,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "5cef9f98-d49b-4f7f-9352-35517344b9fc",
+       "ref": "feb26cdc-1923-4598-917a-8c1f45ba1959",
        "rows": [
         [
          "P186",
@@ -11031,7 +11031,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "7307afd8-9318-4e5a-9ff7-ed3ce5d56f54",
+       "ref": "68a235e3-69c4-4361-8fc5-e9beee134ab0",
        "rows": [
         [
          "P172",
@@ -11566,7 +11566,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "9fb3dd43-dd5a-4dbd-9941-3f320d65836a",
+       "ref": "4268352b-6c9a-4ab0-a021-920e62ce4989",
        "rows": [
         [
          "0",
@@ -12163,7 +12163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lead columns: ['lead_I', 'lead_II', 'lead_III', 'lead_AVR', 'lead_AVL', 'lead_AVF', 'lead_V1', 'lead_V2', 'lead_V3', 'lead_V4', 'lead_V5', 'lead_V6']\n"
+      "Lead columns: []\n"
      ]
     },
     {
@@ -12191,67 +12191,67 @@
          "type": "string"
         },
         {
-         "name": "lead_I",
+         "name": "I",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_II",
+         "name": "II",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_III",
+         "name": "III",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_AVR",
+         "name": "AVR",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_AVL",
+         "name": "AVL",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_AVF",
+         "name": "AVF",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V1",
+         "name": "V1",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V2",
+         "name": "V2",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V3",
+         "name": "V3",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V4",
+         "name": "V4",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V5",
+         "name": "V5",
          "rawType": "object",
          "type": "unknown"
         },
         {
-         "name": "lead_V6",
+         "name": "V6",
          "rawType": "object",
          "type": "unknown"
         }
        ],
-       "ref": "90b2d132-97c5-47b9-b9a9-60dece058d3e",
+       "ref": "41075756-2ba4-4650-a9ea-9d9178c7c9b2",
        "rows": [
         [
          "0",
@@ -12371,18 +12371,18 @@
        "      <th>patient</th>\n",
        "      <th>anatomical_region</th>\n",
        "      <th>position</th>\n",
-       "      <th>lead_I</th>\n",
-       "      <th>lead_II</th>\n",
-       "      <th>lead_III</th>\n",
-       "      <th>lead_AVR</th>\n",
-       "      <th>lead_AVL</th>\n",
-       "      <th>lead_AVF</th>\n",
-       "      <th>lead_V1</th>\n",
-       "      <th>lead_V2</th>\n",
-       "      <th>lead_V3</th>\n",
-       "      <th>lead_V4</th>\n",
-       "      <th>lead_V5</th>\n",
-       "      <th>lead_V6</th>\n",
+       "      <th>I</th>\n",
+       "      <th>II</th>\n",
+       "      <th>III</th>\n",
+       "      <th>AVR</th>\n",
+       "      <th>AVL</th>\n",
+       "      <th>AVF</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -12488,84 +12488,84 @@
        "3    P245              2-RV     P144   \n",
        "4    P245              2-RV     P107   \n",
        "\n",
-       "                                              lead_I  \\\n",
+       "                                                   I  \\\n",
        "0  [0.0, 0.0, 0.0, 0.0, 0.003, 0.003, 0.003, 0.00...   \n",
        "1  [0.045, 0.045, 0.045, 0.042, 0.042, 0.042, 0.0...   \n",
        "2  [0.003, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0...   \n",
        "3  [0.057, 0.06, 0.057, 0.057, 0.054, 0.051000000...   \n",
        "4  [-0.03, -0.03, -0.027, -0.027, -0.024, -0.024,...   \n",
        "\n",
-       "                                             lead_II  \\\n",
+       "                                                  II  \\\n",
        "0  [-0.40800000000000003, -0.405, -0.405, -0.405,...   \n",
        "1  [0.021, 0.024, 0.024, 0.024, 0.024, 0.024, 0.0...   \n",
        "2  [0.024, 0.024, 0.021, 0.021, 0.018000000000000...   \n",
        "3  [0.111, 0.06, 0.009000000000000001, -0.039, -0...   \n",
        "4  [-0.027, -0.027, -0.027, -0.027, -0.024, -0.02...   \n",
        "\n",
-       "                                            lead_III  \\\n",
+       "                                                 III  \\\n",
        "0  [-0.41400000000000003, -0.41100000000000003, -...   \n",
        "1  [-0.024, -0.021, -0.018000000000000002, -0.018...   \n",
        "2  [0.018000000000000002, 0.021, 0.021, 0.021, 0....   \n",
        "3  [0.054, 0.0, -0.048, -0.096, -0.138, -0.174000...   \n",
        "4  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
        "\n",
-       "                                            lead_AVR  \\\n",
+       "                                                 AVR  \\\n",
        "0  [0.20700000000000002, 0.20700000000000002, 0.2...   \n",
        "1  [0.036000000000000004, 0.033, 0.03, 0.03, 0.03...   \n",
        "2  [-0.006, -0.009000000000000001, -0.00900000000...   \n",
        "3  [0.0, 0.027, 0.051000000000000004, 0.075, 0.09...   \n",
        "4  [-0.015, -0.015, -0.015, -0.012, -0.012, -0.01...   \n",
        "\n",
-       "                                            lead_AVL  \\\n",
+       "                                                 AVL  \\\n",
        "0  [0.20400000000000001, 0.201, 0.201, 0.201, 0.1...   \n",
        "1  [-0.033, -0.033, -0.033, -0.033, -0.033, -0.03...   \n",
        "2  [-0.015, -0.012, -0.012, -0.009000000000000001...   \n",
        "3  [-0.075, -0.051000000000000004, -0.03, -0.012,...   \n",
        "4  [0.027, 0.027, 0.027, 0.027, 0.024, 0.024, 0.0...   \n",
        "\n",
-       "                                            lead_AVF  \\\n",
+       "                                                 AVF  \\\n",
        "0  [-0.41100000000000003, -0.40800000000000003, -...   \n",
        "1  [0.0, 0.0, 0.0, 0.003, 0.003, 0.003, 0.003, 0....   \n",
        "2  [0.021, 0.021, 0.021, 0.018000000000000002, 0....   \n",
        "3  [0.081, 0.027, -0.021, -0.069, -0.114, -0.15, ...   \n",
        "4  [-0.012, -0.012, -0.012, -0.012, -0.012, -0.00...   \n",
        "\n",
-       "                                             lead_V1  \\\n",
+       "                                                  V1  \\\n",
        "0  [0.21, 0.21, 0.21, 0.21, 0.21, 0.21, 0.21, 0.2...   \n",
        "1  [-0.003, -0.003, -0.003, -0.003, 0.0, 0.0, 0.0...   \n",
        "2  [0.015, 0.015, 0.015, 0.015, 0.012, 0.015, 0.0...   \n",
        "3  [-0.171, -0.14400000000000002, -0.117, -0.09, ...   \n",
        "4  [0.033, 0.033, 0.033, 0.03, 0.03, 0.027, 0.027...   \n",
        "\n",
-       "                                             lead_V2  \\\n",
+       "                                                  V2  \\\n",
        "0  [0.306, 0.309, 0.309, 0.309, 0.309, 0.312, 0.3...   \n",
        "1  [0.165, 0.162, 0.162, 0.159, 0.156, 0.153, 0.1...   \n",
        "2  [-0.003, -0.009000000000000001, -0.012, -0.018...   \n",
        "3  [-0.24, -0.20400000000000001, -0.171, -0.138, ...   \n",
        "4  [-0.054, -0.054, -0.054, -0.054, -0.057, -0.05...   \n",
        "\n",
-       "                                             lead_V3  \\\n",
+       "                                                  V3  \\\n",
        "0  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.003, 0.006, 0...   \n",
        "1  [0.057, 0.06, 0.06, 0.06, 0.06, 0.06, 0.06, 0....   \n",
        "2  [0.078, 0.078, 0.075, 0.07200000000000001, 0.0...   \n",
        "3  [-0.234, -0.23700000000000002, -0.237000000000...   \n",
        "4  [-0.009000000000000001, -0.009000000000000001,...   \n",
        "\n",
-       "                                             lead_V4  \\\n",
+       "                                                  V4  \\\n",
        "0  [-0.24, -0.24, -0.23700000000000002, -0.237000...   \n",
        "1  [0.024, 0.027, 0.03, 0.03, 0.03, 0.03, 0.03, 0...   \n",
        "2  [0.054, 0.051000000000000004, 0.048, 0.042, 0....   \n",
        "3  [-0.14400000000000002, -0.177, -0.207000000000...   \n",
        "4  [-0.021, -0.021, -0.024, -0.024, -0.024, -0.02...   \n",
        "\n",
-       "                                             lead_V5  \\\n",
+       "                                                  V5  \\\n",
        "0  [-0.429, -0.429, -0.429, -0.426, -0.426, -0.42...   \n",
        "1  [0.012, 0.012, 0.012, 0.015, 0.015, 0.015, 0.0...   \n",
        "2  [0.024, 0.021, 0.018000000000000002, 0.015, 0....   \n",
        "3  [0.051000000000000004, -0.009000000000000001, ...   \n",
        "4  [-0.051000000000000004, -0.051000000000000004,...   \n",
        "\n",
-       "                                             lead_V6  \n",
+       "                                                  V6  \n",
        "0  [-0.486, -0.486, -0.483, -0.483, -0.48, -0.477...  \n",
        "1  [0.0, 0.003, 0.003, 0.006, 0.00900000000000000...  \n",
        "2  [0.009000000000000001, 0.006, 0.006, 0.003, 0....  \n",
@@ -12591,7 +12591,7 @@
     "        ecg_dict = row['ecg']\n",
     "        if ecg_dict and isinstance(ecg_dict, dict):\n",
     "            for lead, signal in ecg_dict.items():\n",
-    "                new_row[f'lead_{lead}'] = signal\n",
+    "                new_row[f'{lead}'] = signal\n",
     "                \n",
     "        result.append(new_row)\n",
     "    \n",
@@ -12616,6 +12616,91 @@
     "We are interested in making sure that the R-wave peak value for all ECGs, currently near the 2nd second, is aligned to exactly the 2nd second for all ECGs. This will allow Model A to avoid having to learn the alignment of the ECGs, and focus on learning the morphology features of the waveform itself.\n",
     "\n",
     "To do this, we wil use the 5 models we were provided with alongside the dataset, which can be used to segment the ECGs according to its phases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bdd85866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
+      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded 5 segmentation models\n"
+     ]
+    }
+   ],
+   "source": [
+    "models_ECG = []\n",
+    "try:\n",
+    "    for i in range(5):\n",
+    "        model_path = os.path.join(extract_dir, 'segmenting_models', f'model.{i+1}')\n",
+    "        models_ECG.append(torch.load(model_path, weights_only=False)) # Otherwise fails with \"weights_only\" argument\n",
+    "    print(f\"Successfully loaded {len(models_ECG)} segmentation models\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading models: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff998f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2500, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# CODE TO GO FROM 12 LEAD DICTS TO SAMPLES X LEADS MATRIX\n",
+    "\"\"\" from sak.signal import StandardHeader\n",
+    "ecg_signals1 = []\n",
+    "for lead in StandardHeader:\n",
+    "    ecg_signals1.append(ecgs[lead][23047])\n",
+    "    \n",
+    "ecg_signals1 = np.asarray(ecg_signals1).T\n",
+    "print(ecg_signals1.shape) \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a7b9f40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# CODE TO PLOT A SEGMENTED FULL ECG SIGNAL (12 LEADS PLOT)\n",
+    "\"\"\" import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(4,3)\n",
+    "row = 0\n",
+    "col = 0\n",
+    "x = np.linspace(0,2.5,int(fs*2.5))\n",
+    "for i,sig in enumerate(ecg_signals1.T):\n",
+    "    ax[row,col].plot(x, sig)\n",
+    "    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[0,:] == 1), color='C0', alpha = 0.3 )\n",
+    "    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[1,:] == 1), color='C1', alpha = 0.3 )\n",
+    "    ax[row,col].fill_between(x, np.min(sig), np.max(sig), where=(segmentation1[2,:] == 1), color='C2', alpha = 0.3 )\n",
+    "    col += 1\n",
+    "    if col >= 3:\n",
+    "        row += 1\n",
+    "        col = 0\n",
+    "    plt.plot() \"\"\""
    ]
   },
   {
