wip: kernel crashes on segmenting models

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -359,7 +359,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "24a4f69b-83fd-4983-8fc5-908a00e57b27",
+       "ref": "4331b1f2-f888-4133-a120-89e87c200afa",
        "rows": [
         [
          "P186",
@@ -774,7 +774,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "599bb914-c70f-45fe-94a9-f694ad7e2985",
+       "ref": "e823036f-ccd2-4261-9af0-17e8be2788b5",
        "rows": [
         [
          "P186",
@@ -1152,7 +1152,7 @@
          "type": "float"
         }
        ],
-       "ref": "2def4965-757a-4a2a-9158-d7c50b6e97be",
+       "ref": "99eaa8c7-51c0-4172-b71f-7a8652908b93",
        "rows": [
         [
          "P186",
@@ -2534,7 +2534,7 @@
          "type": "float"
         }
        ],
-       "ref": "f596e993-3f5a-468a-98b9-292ed7966bce",
+       "ref": "b73b4f77-355c-4960-9e91-55b399c79983",
        "rows": [
         [
          "P186",
@@ -4081,7 +4081,7 @@
          "type": "float"
         }
        ],
-       "ref": "55cac115-dc9e-4b1d-8765-d02694749c64",
+       "ref": "75ca0960-6436-4d1c-b8bd-5273df9c8225",
        "rows": [
         [
          "P186",
@@ -5529,7 +5529,7 @@
          "type": "string"
         }
        ],
-       "ref": "0614cb09-c545-43b9-8567-ea300cb9ffed",
+       "ref": "085a5c4e-df62-45cc-9f5f-8ed69748f50c",
        "rows": [
         [
          "0",
@@ -6114,7 +6114,7 @@
          "type": "string"
         }
        ],
-       "ref": "353be740-b93b-457c-95e3-69ca276e7b2c",
+       "ref": "e5ac34c1-fee6-446e-ae60-27f5fd3981f7",
        "rows": [
         [
          "0",
@@ -6668,8 +6668,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'RVOTFREEWALL', 'COMMISSURE', 'RCC', 'SUMMIT', 'LCC', 'RVOTSEPTUM', 'LVOTSUBVALVULAR'}\n",
-      "Subregions in sheet 2: {'RVOTFREEWALL', 'LVOTSUMMIT', 'RCC', 'LCC', 'COMMISURE', 'RVOTSEPTUM', 'LVOTSUBVALVULAR'}\n"
+      "Subregions in sheet 1: {'LVOTSUBVALVULAR', 'COMMISSURE', 'RCC', 'LCC', 'RVOTFREEWALL', 'SUMMIT', 'RVOTSEPTUM'}\n",
+      "Subregions in sheet 2: {'LVOTSUBVALVULAR', 'LVOTSUMMIT', 'COMMISURE', 'RCC', 'LCC', 'RVOTFREEWALL', 'RVOTSEPTUM'}\n"
      ]
     }
    ],
@@ -6917,7 +6917,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "242d0070-af79-4508-b58b-a232b057e1bd",
+       "ref": "bc52ed4a-3661-41a5-8a47-4397c5b5e69b",
        "rows": [
         [
          "P186",
@@ -8004,7 +8004,7 @@
          "type": "float"
         }
        ],
-       "ref": "f13faa72-c43a-4a2f-875b-979a1e2ccf9f",
+       "ref": "297beb08-f823-420c-b6db-1c9ea69ae11e",
        "rows": [
         [
          "P186",
@@ -9114,7 +9114,7 @@
          "type": "string"
         }
        ],
-       "ref": "22720676-20c4-44f4-b6dc-77f07aeeeb69",
+       "ref": "f792489d-67e2-4a9e-9a05-4f8fa6921ecf",
        "rows": [
         [
          "P173",
@@ -9269,7 +9269,7 @@
          "type": "string"
         }
        ],
-       "ref": "55532aee-32a7-46ea-b3df-f7e33aa11102",
+       "ref": "1295c8c5-358b-4fa8-a3fe-ee70ef66288f",
        "rows": [
         [
          "P186",
@@ -9500,7 +9500,7 @@
          "type": "string"
         }
        ],
-       "ref": "2acdcc49-bfd6-4cbe-8836-a6ddddafbd85",
+       "ref": "8dc6528d-69d5-43e3-9a58-e360fdabb6b9",
        "rows": [
         [
          "P172",
@@ -9743,7 +9743,7 @@
          "type": "string"
         }
        ],
-       "ref": "9dfd90b6-9fac-4f95-a291-d49b679c909b",
+       "ref": "4bdbf405-31a4-4e35-b0dd-47659b90bb3c",
        "rows": [
         [
          "P290",
@@ -9900,7 +9900,7 @@
          "type": "string"
         }
        ],
-       "ref": "f6c5a877-5819-49f0-83f8-80a1bdc38a51",
+       "ref": "98223b15-ec2a-41d6-ad02-63cf621c1134",
        "rows": [
         [
          "P285",
@@ -10163,7 +10163,7 @@
          "type": "integer"
         }
        ],
-       "ref": "4a1078d5-4862-4e7e-8ac7-03412f75b39b",
+       "ref": "a31eff6b-11de-42fc-ac80-c7e16aa69545",
        "rows": [
         [
          "P245",
@@ -10622,7 +10622,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "5fd29d04-a5e1-460a-be2d-8f5d156f0d74",
+       "ref": "c145080a-0534-4097-814e-81904434cdc7",
        "rows": [
         [
          "P186",
@@ -11036,7 +11036,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "27f7aabc-e7f4-46bc-9746-b150e18b827d",
+       "ref": "8040b746-5ea0-4d4a-b413-31c247c8c7f4",
        "rows": [
         [
          "P172",
@@ -11571,7 +11571,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "52d244b6-0fb2-4b58-b08f-1c4ca59e5fe6",
+       "ref": "d5211c4c-eb07-4a77-9397-1c497b438ed7",
        "rows": [
         [
          "0",
@@ -12256,7 +12256,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "1f6a73f3-be12-4091-8335-01101dd2188c",
+       "ref": "c02b4769-6797-4c8b-8eb0-d178c3f8d08c",
        "rows": [
         [
          "0",
@@ -12751,6 +12751,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d72297ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of models: 5\n",
+      "\n",
+      "Model 1:\n",
+      "- Type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "- Device: cpu\n",
+      "- Has forward method: True\n",
+      "- Structure sample:\n",
+      "  • encoder_1_lvl1: <class 'sak.torch.nn.modules.models.CNN'>\n",
+      "  • encoder_1_avgpool1: <class 'torch.nn.modules.pooling.AvgPool1d'>\n",
+      "\n",
+      "Model 2:\n",
+      "- Type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "- Device: cpu\n",
+      "- Has forward method: True\n",
+      "- Structure sample:\n",
+      "  • encoder_1_lvl1: <class 'sak.torch.nn.modules.models.CNN'>\n",
+      "  • encoder_1_avgpool1: <class 'torch.nn.modules.pooling.AvgPool1d'>\n",
+      "\n",
+      "Model 3:\n",
+      "- Type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "- Device: cpu\n",
+      "- Has forward method: True\n",
+      "- Structure sample:\n",
+      "  • encoder_1_lvl1: <class 'sak.torch.nn.modules.models.CNN'>\n",
+      "  • encoder_1_avgpool1: <class 'torch.nn.modules.pooling.AvgPool1d'>\n",
+      "\n",
+      "Model 4:\n",
+      "- Type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "- Device: cpu\n",
+      "- Has forward method: True\n",
+      "- Structure sample:\n",
+      "  • encoder_1_lvl1: <class 'sak.torch.nn.modules.models.CNN'>\n",
+      "  • encoder_1_avgpool1: <class 'torch.nn.modules.pooling.AvgPool1d'>\n",
+      "\n",
+      "Model 5:\n",
+      "- Type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "- Device: cpu\n",
+      "- Has forward method: True\n",
+      "- Structure sample:\n",
+      "  • encoder_1_lvl1: <class 'sak.torch.nn.modules.models.CNN'>\n",
+      "  • encoder_1_avgpool1: <class 'torch.nn.modules.pooling.AvgPool1d'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inspect_models(models):\n",
+    "    print(f\"Number of models: {len(models)}\")\n",
+    "    for i, model in enumerate(models):\n",
+    "        print(f\"\\nModel {i+1}:\")\n",
+    "        print(f\"- Type: {type(model)}\")\n",
+    "        print(f\"- Device: {next(model.parameters()).device}\")\n",
+    "        \n",
+    "        print(f\"- Has forward method: {'forward' in dir(model)}\")\n",
+    "        print(f\"- Structure sample:\")\n",
+    "        for name, module in list(model.named_children())[:2]:  # Show first 2 top-level layers\n",
+    "            print(f\"  • {name}: {type(module)}\")\n",
+    "\n",
+    "\n",
+    "inspect_models(models_ECG)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "538ae2cc",
    "metadata": {},
@@ -12760,7 +12831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "id": "94cf45a8",
    "metadata": {},
    "outputs": [
@@ -12787,7 +12858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "9a730dff",
    "metadata": {},
    "outputs": [],
@@ -12823,7 +12894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "cfccaf57",
    "metadata": {},
    "outputs": [
@@ -12852,7 +12923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "id": "9a3fc166",
    "metadata": {},
    "outputs": [
@@ -12875,7 +12946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "2526d4fe",
    "metadata": {},
    "outputs": [
@@ -12904,7 +12975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "id": "e5c6208f",
    "metadata": {},
    "outputs": [
@@ -12931,7 +13002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "id": "4212c406",
    "metadata": {},
    "outputs": [
@@ -12960,7 +13031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "876b21e8",
    "metadata": {},
    "outputs": [],
@@ -12990,7 +13061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "id": "e2ac0642",
    "metadata": {},
    "outputs": [
@@ -13019,68 +13090,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
+   "id": "09e6d58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting debug function\n",
+      "Number of models: 5\n",
+      "Type of models_ECG: <class 'list'>\n",
+      "Trying to access first model...\n",
+      "Model type: <class 'sak.torch.nn.modules.composers.ModelGraph'>\n",
+      "Trying to access model parameters...\n",
+      "Model on device: cpu\n",
+      "Debug result: Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "def debug_model_loading(models_ECG):\n",
+    "    \"\"\"Minimal function to debug where the crash is happening\"\"\"\n",
+    "    print(\"Starting debug function\")\n",
+    "    \n",
+    "    try:\n",
+    "        print(f\"Number of models: {len(models_ECG)}\")\n",
+    "        print(f\"Type of models_ECG: {type(models_ECG)}\")\n",
+    "        \n",
+    "        # Try to access first model\n",
+    "        print(\"Trying to access first model...\")\n",
+    "        model = models_ECG[0]\n",
+    "        print(f\"Model type: {type(model)}\")\n",
+    "        \n",
+    "        # Try to access model parameters\n",
+    "        print(\"Trying to access model parameters...\")\n",
+    "        try:\n",
+    "            first_param = next(model.parameters())\n",
+    "            print(f\"Model on device: {first_param.device}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error accessing parameters: {str(e)}\")\n",
+    "        \n",
+    "        return \"Success\"\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in debug function: {str(e)}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
+    "\n",
+    "# Call the debug function\n",
+    "result = debug_model_loading(models_ECG)\n",
+    "print(f\"Debug result: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "c83c70e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_ecg_for_segmentation(ecg_250, models, window_size=2048, \n",
-    "                               thr_dice=0.9, threshold_ensemble=0.5, batch_size=16):\n",
+    "def process_ecg_for_segmentation_simple(ecg_250, models_ECG=None):\n",
+    "    \"\"\"Simplified version of the segmentation function to diagnose issues.\"\"\"\n",
     "    try:\n",
-    "        N, L = ecg_250.shape\n",
+    "        # Print basic info\n",
     "        print(f\"Input ECG shape: {ecg_250.shape}\")\n",
+    "        if models_ECG is None:\n",
+    "            # Use global variable if not provided\n",
+    "            print(f\"Using global models, count: {len(models_ECG)}\")\n",
     "        \n",
-    "        # Reshape for model input\n",
-    "        input_signal = np.expand_dims(ecg_250, axis=0)  # Add batch dimension\n",
-    "        input_signal = np.swapaxes(input_signal, 1, 2)  # Swap to (batch, leads, samples)\n",
-    "        print(f\"Reshaped input signal shape: {input_signal.shape}\")\n",
+    "        # Check first model properties\n",
+    "        model = models_ECG[0]\n",
+    "        print(f\"Model type: {type(model)}\")\n",
+    "        print(f\"Model on device: {next(model.parameters()).device}\")\n",
     "        \n",
-    "        # Check if models is a list\n",
-    "        if not isinstance(models, list):\n",
-    "            models = [models]\n",
+    "        # Basic preprocessing - reshape for model\n",
+    "        input_signal = np.expand_dims(ecg_250, axis=0)           # Add batch dimension\n",
+    "        input_signal = np.swapaxes(input_signal, 1, 2)           # Swap to get leads as channels\n",
+    "        print(f\"Processed signal shape: {input_signal.shape}\")\n",
     "        \n",
-    "        # Initialize result mask\n",
-    "        mask = np.zeros((1, 3, input_signal.shape[2]), dtype=int)\n",
+    "        # Convert to tensor\n",
+    "        input_tensor = torch.tensor(input_signal, dtype=torch.float32)\n",
+    "        print(f\"Input tensor shape: {input_tensor.shape}, device: {input_tensor.device}\")\n",
     "        \n",
-    "        # Use CPU for more reliable execution (can switch back to GPU later)\n",
-    "        device = \"cpu\"  # Using CPU first to avoid GPU memory issues\n",
+    "        # Try simple forward pass with only first model\n",
+    "        print(\"Attempting inference with first model only...\")\n",
+    "        model = model.to(\"cpu\")\n",
+    "        model.eval()\n",
     "        \n",
-    "        # Process with each model\n",
-    "        for i, m in enumerate(models):\n",
-    "            print(f\"Processing with model {i+1}/{len(models)}\")\n",
+    "        # Create inputs dictionary - the most basic form\n",
+    "        inputs = {\"x\": input_tensor}\n",
+    "        \n",
+    "        # Perform inference\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(inputs)\n",
+    "            print(\"Forward pass successful!\")\n",
+    "            print(f\"Output keys: {list(outputs.keys())}\")\n",
     "            \n",
-    "            # Move model to device\n",
-    "            m = m.to(device)\n",
-    "            \n",
-    "            # Convert input to tensor\n",
-    "            tensor_input = torch.tensor(input_signal, dtype=torch.float32).to(device)\n",
-    "            inputs = {\"x\": tensor_input}\n",
-    "            \n",
-    "            # Run inference\n",
-    "            with torch.no_grad():\n",
-    "                outputs = m(inputs)\n",
-    "                if \"sigmoid\" not in outputs:\n",
-    "                    print(f\"Model output keys: {outputs.keys()}\")\n",
-    "                    raise ValueError(\"Model output doesn't contain 'sigmoid' key\")\n",
-    "                \n",
+    "            # If we got this far, try to extract probabilities\n",
+    "            if \"sigmoid\" in outputs:\n",
     "                probs = outputs[\"sigmoid\"].cpu().detach().numpy()\n",
-    "                mask += (probs > thr_dice)\n",
-    "            \n",
-    "            # Clear GPU memory if used\n",
-    "            if torch.cuda.is_available():\n",
-    "                torch.cuda.empty_cache()\n",
-    "        \n",
-    "        # Apply ensemble threshold\n",
-    "        mask = mask >= (len(models) * threshold_ensemble)\n",
-    "        \n",
-    "        # Remove batch dimension\n",
-    "        segmentation = mask[0, :, :]\n",
-    "        print(f\"Final segmentation shape: {segmentation.shape}\")\n",
-    "        \n",
-    "        return segmentation\n",
-    "        \n",
+    "                print(f\"Sigmoid output shape: {probs.shape}\")\n",
+    "                \n",
+    "                # Create a basic segmentation\n",
+    "                segmentation = probs > 0.9\n",
+    "                print(f\"Segmentation shape: {segmentation.shape}\")\n",
+    "                return segmentation[0]  # Remove batch dimension\n",
+    "            else:\n",
+    "                print(\"No 'sigmoid' key in model outputs\")\n",
+    "                return None\n",
+    "    \n",
     "    except Exception as e:\n",
-    "        print(f\"Error in process_ecg_for_segmentation: {e}\")\n",
+    "        print(f\"Error: {str(e)}\")\n",
     "        import traceback\n",
     "        traceback.print_exc()\n",
     "        return None"
@@ -13088,7 +13209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "ff42f863",
    "metadata": {},
    "outputs": [
@@ -13099,7 +13220,19 @@
       "Number of models: 5\n",
       "Type of models_ECG: <class 'list'>\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(f\"Number of models: {len(models_ECG)}\")\n",
+    "print(f\"Type of models_ECG: {type(models_ECG)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "6729636b",
+   "metadata": {},
+   "outputs": [
     {
      "ename": "",
      "evalue": "",
@@ -13113,18 +13246,7 @@
     }
    ],
    "source": [
-    "print(f\"Number of models: {len(models_ECG)}\")\n",
-    "print(f\"Type of models_ECG: {type(models_ECG)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6729636b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segmentation = process_ecg_for_segmentation(test_ecg_2048, models_ECG)"
+    "segmentation = process_ecg_for_segmentation_simple(test_ecg_2048, models_ECG)"
    ]
   },
   {
