Spase PCA set-up

--- a/final_train.ipynb
+++ b/final_train.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Gradient Descent and similars do not work in discrete values (hyperparameters) since a continous function is needed in order to differentiate.\n",
     "\n",
-    "In this notebook we will work on the assumption that we have already pre-processed all the data and we receive as input a matrix X containing all ECGs + demographic data and a matrix Y containing the final labels of the train, and we can divide them between train and test accordingly.\n",
+    "In this notebook we will work on the assumption that we have already pre-processed all the data, and reduced it's dimentionality and we receive as input a matrix X containing all ECGs + demographic data and a matrix Y containing the final labels of the train, and we can divide them between train and test accordingly.\n",
     "\n",
     "The following cell is just some fictional data in order to facilitate the final code\n"
    ]
